--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@3yourmind/kotti-style": "^0.0.2",
+    "@3yourmind/vue-yodify": "^0.2.5",
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "vue": "^2.5.11"
